--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
-    "@types/react-redux": "^7.1.24",
     "eslint-plugin-prettier": "^4.0.0",
     "firebase": "^9.6.10",
     "formik": "^2.2.9",
@@ -22,6 +21,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.6.2",
@@ -84,6 +84,8 @@
     "@storybook/preset-create-react-app": "^4.1.0",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.24",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint-config-airbnb": "^18.2.1",
